--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,6 @@ ethers = "2.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 log = "0.4"
-env_logger = "0.9"
+env_logger = "0.10"
+csv = "1.3"
+chrono = "0.4"
