--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,12 @@ edition = "2021"
 tokio = { version = "1", features = ["full"] }
 ethers = "2.0"
 serde = { version = "1.0", features = ["derive"] }
+chrono = { version = "0.4", features = ["serde"] }
 serde_json = "1.0"
 log = "0.4"
 env_logger = "0.10"
 csv = "1.3"
-chrono = "0.4"
+futures = "0.3"
 dashmap = "6.1"
+reqwest = { version = "0.12", features = ["json"] }
+plotters = "0.3"
