--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
-name = "eth-analyzer"
+name = "eth_analyzer"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-tokio = { version = "1", features = ["full"] }
+tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
 ethers = "2.0"
 serde = { version = "1.0", features = ["derive"] }
 chrono = { version = "0.4", features = ["serde"] }
@@ -17,3 +17,5 @@ dashmap = "6.1"
 reqwest = { version = "0.12", features = ["json"] }
 plotters = "0.3"
 once_cell = "1.2"
+async-trait = "0.1"
+tempfile = "3.2"
